internal/controller/test_data/nocache/expected/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nocache-wmts-mapproxy
  namespace: default
  labels:
    pdok.nl/app: mapproxy
    pdok.nl/dataset-id: dataset
    pdok.nl/owner-id: owner
    pdok.nl/service-type: wmts
    pdok.nl/service-version: v1_0
  ownerReferences:
    - apiVersion: pdok.nl/v2
      kind: WMTS
      name: nocache
      uid: ""
      controller: true
      blockOwnerDeletion: true
spec:
  ports:
    - name: lighttpd
      port: 80
      protocol: TCP
    - name: apache-exporter
      port: 9117
      protocol: TCP
    - name: wmts-kvp-to-restful
      port: 9001
      protocol: TCP
  selector:
    pdok.nl/app: mapproxy
    pdok.nl/dataset-id: dataset
    pdok.nl/owner-id: owner
    pdok.nl/service-type: wmts
    pdok.nl/service-version: v1_0
  type: ClusterIP
  sessionAffinity: None
  internalTrafficPolicy: "Cluster"
